fix: more broken links fixes

--- a/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
@@ -511,7 +511,7 @@ The `depositAddressRequest` object describes the swap for which a deposit addres
     </tr>
     <tr>
         <td>
-            <a href="overview#slippage-protection-fillorkillparams"><code>fillOrKillParams</code></a>
+            <a href="/brokers/javascript-sdk/params#fillorkillparams"><code>fillOrKillParams</code></a>
             <span className="param-required-label">(required)</span>
         </td>
         <td>
@@ -810,7 +810,7 @@ The `vaultSwapRequest` object describes the swap for which the vault swap data i
     </tr>
     <tr>
         <td>
-            <a href="overview#slippage-protection-fillorkillparams"><code>fillOrKillParams</code></a>
+            <a href="/brokers/javascript-sdk/params#fillorkillparams"><code>fillOrKillParams</code></a>
             <span className="param-required-label">(required)</span>
         </td>
         <td>
