--- a/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
@@ -32,7 +32,7 @@ We recommend waiting until the extrinsic is finalized before sending any assets 
 Parameters:
 - [`asset`](/lp/lp-api/types#asset): The asset you wish to deposit.
 - [`wait_for`](/lp/lp-api/types#wait-for) (Optional)
-- [`boost_fee`](/lp/lp-api/types#boost-fee) (Optional): The maximum amount you are willing to pay to [boost](/lp/boost/how-boost-works) the deposit, expressed as basis points.
+- [`boost_fee`](/lp/lp-api/types#boost-fee) (Optional): The maximum amount you are willing to pay to [boost](/lp/how-boost-works) the deposit, expressed as basis points.
 
 [Response](/lp/lp-api/types#wait-for-result):
 - The encoded deposit [address](/lp/lp-api/types#addresses) that you should send the deposit to.
@@ -75,7 +75,7 @@ We recommend waiting until the extrinsic is finalized before sending any assets 
 Parameters:
 - [`asset`](/lp/lp-api/types#asset): The asset you wish to deposit.
 - [`wait_for`](/lp/lp-api/types#wait-for) (Optional)
-- [`boost_fee`](/lp/lp-api/types#boost-fee) (Optional): The maximum amount you are willing to pay to [boost](/lp/boost/how-boost-works) the deposit, expressed as basis points.
+- [`boost_fee`](/lp/lp-api/types#boost-fee) (Optional): The maximum amount you are willing to pay to [boost](/lp/how-boost-works) the deposit, expressed as basis points.
 
 [Response](/lp/lp-api/types#wait-for-result):
 - An object containing The encoded deposit [address](/lp/lp-api/types#addresses) and the block number of the deposit chain at which the deposit address will expire.
