--- a/app/protocol/(3-technical-docs)/token-economics/current-token-economics-2025-and-beyond/page.mdx
+++ b/app/protocol/(3-technical-docs)/token-economics/current-token-economics-2025-and-beyond/page.mdx
@@ -41,7 +41,7 @@ While most FLIP supply is already in circulation, some scheduled unlocks and ong
 
 💡 **Key Takeaway:** FLIP has passed through most of its unlock schedule, with protocol emissions & team vesting making up all unlocks.
 <Callout type="info">
-For a detailed breakdown of emissions, visit [Incentive Design: Emissions & Burning](./incentive-design-emission-and-burning).
+For a detailed breakdown of emissions, visit [Incentive Design: Emissions & Burning](/protocol/token-economics/incentive-design-emission-and-burning).
 </Callout>
 
 ## FLIP Buy-and-Burn: Long-Term Supply Impact
@@ -54,7 +54,7 @@ FLIP benefits from a built-in **deflationary mechanism** that counteracts emissi
 ### Deflationary Impact
 These mechanisms remove FLIP from circulation, **increasing scarcity** and counteracting emissions.
 <Callout type="info">
-More details on burning can be found in the [Incentive Design: Emissions & Burning](./incentive-design-emission-and-burning) section.
+More details on burning can be found in the [Incentive Design: Emissions & Burning](/protocol/token-economics/incentive-design-emission-and-burning) section.
 </Callout>
 
 ## Live Token Data & Unlock Schedule
