--- a/app/lp/(3-techincal-docs)/boost-rpcs/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/boost-rpcs/requests/page.mdx
@@ -21,10 +21,10 @@ Returns:
 
 An array of objects for all existing boost pools, each with the following fields:
 
-- `chain`: (String) [Chain](/lp/integrations/lp-api#chain) 
-- `asset`: (String) [Asset](/lp/integrations/lp-api#asset)
+- `chain`: (String) [Chain](//lp/lp-api/types#chain)
+- `asset`: (String) [Asset](//lp/lp-api/types#asset)
 - `tier`: (Number) [Fee Tier](#fee-tier) Fee in basis points charged by this pool 
-- `available_amount`: (String) [Amount](/lp/integrations/lp-api#amount) - Maximum amount of `asset` that the pool can boost at the moment
+- `available_amount`: (String) [Amount](//lp/lp-api/types#amount) - Maximum amount of `asset` that the pool can boost at the moment
 
 #### Example
 
@@ -73,7 +73,7 @@ and the ids of pending deposits boosted by each of them.
 
 Parameters:
 
-- `asset`: (String, optional) [Asset](/lp/integrations/lp-api#asset): Allows filtering the response by pool's asset; returns results for every asset if not provided.
+- `asset`: (String, optional) [Asset](//lp/lp-api/types#asset): Allows filtering the response by pool's asset; returns results for every asset if not provided.
 - `at`: (String, Optional) Block Hash: The call will be executed against the state of the Chainflip state chain
 at this block; defaults to the most recent block.
 
@@ -81,19 +81,19 @@ Returns:
 
 An array of objects for each of the queried pools, each containing the following fields:
 
-- `chain`: (String) [Chain](/lp/integrations/lp-api#chain)
-- `asset`: (String) [Asset](/lp/integrations/lp-api#asset)
+- `chain`: (String) [Chain](//lp/lp-api/types#chain)
+- `asset`: (String) [Asset](//lp/lp-api/types#asset)
 - `fee_tier`: (Number) [Fee Tier](#fee-tier)
 - `available_amounts`: (Array of Objects) funds contributed by each account that are available for boosting (i.e. not currently used in a pending boost), represented by an array of Objects containing the following fields:
-    - `account_id`: (String) [account](/lp/integrations/lp-api#addresses) - identifies boost pool's contributor
-    - `amount`: (String) [Amount](/lp/integrations/lp-api#amount) - `account_id`'s available funds in the pool
+    - `account_id`: (String) [account](//lp/lp-api/types#addresses) - identifies boost pool's contributor
+    - `amount`: (String) [Amount](//lp/lp-api/types#amount) - `account_id`'s available funds in the pool
 - `deposits_pending_finalization` (Array of Objects) - An Array of deposits currently awaiting finalisation that the pool contributed to, each containing:
     - `deposit_id`: (Number) - identifies the boosted deposit
     - `owed_amounts`: (Array of Objects) - funds that each account is expecting to receive upon the deposit's finalisation, represented by a list of items containing:
-        - `account_id`: (String) [account](/lp/integrations/lp-api#addresses) identifies boost pool's contributor
-        - `amount`: (String) [Amount](/lp/integrations/lp-api#amount) - amount to be received by `account_id`
+        - `account_id`: (String) [account](//lp/lp-api/types#addresses) identifies boost pool's contributor
+        - `amount`: (String) [Amount](//lp/lp-api/types#amount) - amount to be received by `account_id`
 - `pending_withdrawals` (Array of Objects) - accounts that have requested to "stop boosting", along with the deposits awaiting finalisation they have contributed to, represented by an array of objects containing:
-    - `account_id`: (String) [account](/lp/integrations/lp-api#addresses) - identifies boost pool's contributor
+    - `account_id`: (String) [account](//lp/lp-api/types#addresses) - identifies boost pool's contributor
     - `pending_deposits`: (Array of Numbers) - An array of ids of pending deposits (each represented by `number`) that `account_id` contributed to.
 
 #### Example
@@ -197,7 +197,7 @@ provided the corresponding deposits get finalised.
 
 Parameters:
 
-- `asset`: [Asset](/lp/integrations/lp-api#asset) (Optional): allows filtering the response by pool's asset; returns results for every asset if not provided.
+- `asset`: [Asset](//lp/lp-api/types#asset) (Optional): allows filtering the response by pool's asset; returns results for every asset if not provided.
 - `at`: Block Hash (Optional): rpc will be executed against the state of the blockchain
 at this block; defaults to the hash of the most recent block.
 
@@ -206,14 +206,14 @@ Returns:
 
 A list of items each containing the following fields:
 
-- `chain`: [Chain](/lp/integrations/lp-api#chain)
-- `asset`: [Asset](/lp/integrations/lp-api#asset)
+- `chain`: [Chain](//lp/lp-api/types#chain)
+- `asset`: [Asset](//lp/lp-api/types#asset)
 - `fee_tier`: [Fee Tier](#fee-tier)
 - `pending_fees` - a list of items, each containing:
     - `deposit_id`: number
     - `fees` - a list of items, each containing:
-        - `account_id`: [account](/lp/integrations/lp-api#addresses) - identifies boost pool's contributor
-        - `amount`: [Amount](/lp/integrations/lp-api#amount) - amount in fees to be credited to `account_id` upon `deposit_id`'s finalisation
+        - `account_id`: [account](//lp/lp-api/types#addresses) - identifies boost pool's contributor
+        - `amount`: [Amount](//lp/lp-api/types#amount) - amount in fees to be credited to `account_id` upon `deposit_id`'s finalisation
 
 
 #### Example
