--- a/app/validators/(2-guides)/testnet/funding/page.mdx
+++ b/app/validators/(2-guides)/testnet/funding/page.mdx
@@ -131,8 +131,8 @@ Similarly to redemptions, rebalancing is subject to certain restrictions:
 
 - The destination account must already exist: account creation through a rebalance operation is not possible.
 If the source account is currently bidding in an auction, the destination account must also be in a bidding state.
-- [Bound addresses](./advanced-account-management) on the destination account must match the source account.
-- If the funds to be transferred are associated with a [restricted source address](./advanced-account-management#restricted-balances), the transferred funds will have the same restrictions in the destination account.
+- [Bound addresses](/validators/mainnet/funding#advanced-account-management) on the destination account must match the source account.
+- If the funds to be transferred are associated with a [restricted source address](/validators/mainnet/funding#restricted-balances), the transferred funds will have the same restrictions in the destination account.
 
 To rebalance, use the `chainflip-cli`. For example, to move 10,000 $FLIP to account `cFK1qK1oSfZqZzka4ABWRybf24GtUjYJuWj2A1g9aHpcGny5e`:
 
