fix: more broken links fixes

--- a/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
+++ b/app/protocol/(3-technical-docs)/supported-chains-assets/chains-assets/page.mdx
@@ -43,6 +43,6 @@ Our SDK/API uses human-readable strings to identify assets. For more information
 
 We currently support different networks for different purposes:
 
-- **Mainnet**: Our mainnet deployment. Learn more in [Mainnet Documentation](/validators/mainnet/validator-setup/prerequisites).
-- **Perseverance**: Our persistent testnet. Learn more in [Perseverance Documentation](/validators/testnet/validator-documentation).
+- **Mainnet**: Our mainnet deployment. Learn more in [Mainnet Documentation](/validators/mainnet/validator-setup#1-prerequisites).
+- **Perseverance**: Our persistent testnet. Learn more in [Perseverance Documentation](/validators/testnet/validator-setup).
 - **Sisyphos**: Our staging network where we test releases before upgrading Perseverance.
