fix: more broken links fixes

--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/evm/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/evm/page.mdx
@@ -10,7 +10,7 @@ import { Callout } from "nextra/components";
 
 ## EVM Vault swaps
 
-Initiating a [Vault Swap](vault-swaps#vault-swaps) on an EVM chain (currently Ethereum or Arbitrum) requires making a smart contract call to Chainflip's Vault contract. The contract addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
+Initiating a [Vault Swap](/brokers/broker-vault-swaps) on an EVM chain (currently Ethereum or Arbitrum) requires making a smart contract call to Chainflip's Vault contract. The contract addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
 
 EVM Vault Swaps follow the same pattern mentioned in the [Vault Swaps introduction](/brokers/broker-vault-swaps):
 
