--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
@@ -10,7 +10,7 @@ import { Callout } from "nextra/components";
 
 ## Solana Vault Swaps
 
-Initiating a Solana [Vault Swap](vault-swaps#vault-swaps) requires making a program call to Chainflip's Swap Endpoint program. The program addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
+Initiating a Solana [Vault Swap](/brokers/broker-vault-swaps) requires making a program call to Chainflip's Swap Endpoint program. The program addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
 
 Solana Vault Swaps follow the same pattern mentioned in the [Vault Swaps introduction](/brokers/broker-vault-swaps):
 
