--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/requests/page.mdx
@@ -716,7 +716,7 @@ Response:
 
 ### `cf_scheduled_swaps`
 
-Returns all scheduled swaps in a pool. Works similarly to [cf_subscribe_scheduled_swaps](lp-rpcs#cf_subscribe_scheduled_swaps).
+Returns all scheduled swaps in a pool.
 
 Parameters:
 
