--- a/app/validators/(2-guides)/mainnet/important-notes/page.mdx
+++ b/app/validators/(2-guides)/mainnet/important-notes/page.mdx
@@ -54,7 +54,7 @@ It is crucial to have a backup and recovery strategy in place due to the possibi
 
 #### Validator's `$FLIP` Bond
 
-Backing up and securing the Validator's `$FLIP` bond is akin to backing up any cryptocurrency wallet. The seed-phrase that was created by [generating validator keys](keys#validator-keys) must be securely and remotely stored; ideally in a physically secure location offline. This seed-phrase will be required to recover your Chainflip account keys and your Ethereum keys. This is the absolute minimum requirement to backing up your Validator's `$FLIP` bond.
+Backing up and securing the Validator's `$FLIP` bond is akin to backing up any cryptocurrency wallet. The seed-phrase that was created by [generating validator keys](/validators/mainnet/validator-setup#validator-keys) must be securely and remotely stored; ideally in a physically secure location offline. This seed-phrase will be required to recover your Chainflip account keys and your Ethereum keys. This is the absolute minimum requirement to backing up your Validator's `$FLIP` bond.
 
 #### Chaindata and Session Keys
 
