fix: improve seo meta tags

--- a/app/lp/(1-concepts)/lp-account/page.mdx
+++ b/app/lp/(1-concepts)/lp-account/page.mdx
@@ -2,7 +2,7 @@
 
 title: LP Account
 
-description: Chainflip uses the concept of Account Roles to manage permissions between various network actors. 
+description: Chainflip LP Account guide.
 
 ---
 
