--- a/app/brokers/(1-concepts)/broker-account/page.mdx
+++ b/app/brokers/(1-concepts)/broker-account/page.mdx
@@ -2,7 +2,7 @@
 
 title: Broker Account
 
-description: Chainflip uses the concept of Account Roles to manage permissions between various network actors. 
+description: Chainflip Broker Account guide
 
 ---
 
