feat: added missing key purging guide

--- a/app/lp/(3-techincal-docs)/boost-rpcs/page.mdx
+++ b/app/lp/(3-techincal-docs)/boost-rpcs/page.mdx
@@ -1,8 +1,8 @@
 ---
 
-title: Boost RPCs Index
+title: Boost RPCs
 
-description: All available Boost RPCs.
+description: Boost RPCs endpoints
 
 ---
 
