--- a/app/validators/(2-guides)/mainnet/important-notes/page.mdx
+++ b/app/validators/(2-guides)/mainnet/important-notes/page.mdx
@@ -80,7 +80,7 @@ By default, these keys are stored under `/etc/chainflip/keys`. These are the key
 
 These keys are extremely important and should be treated with the utmost care. Losing them can result in a loss of funds and compromise the security of your validator. It is crucial to keep them safe and secure.
 
-If you *do* lose access to these keys, you can [recover your validator account](keys#recovering-your-keys) and restore it to a state where it can participate in the network again.
+If you *do* lose access to these keys, you can [recover your validator account](/validators/mainnet/validator-setup#recovering-your-keys) and restore it to a state where it can participate in the network again.
 
 However, there are important considerations to keep in mind:
 
