--- a/app/validators/(2-guides)/testnet/validator-setup/page.mdx
+++ b/app/validators/(2-guides)/testnet/validator-setup/page.mdx
@@ -632,7 +632,7 @@ At the start, you should see that your node is synchronising to the network, som
 
     If you started syncing in `archive` mode and you wish to update to `warp` sync, make sure to purge the chain and start syncing using `--sync=warp`. The sync parameters get stored in the node's database and simply updating the cli flag won't take effect.
 
-    To purge the chain, check [this section](/validators/misc/tips/purging-chaindata).
+    To purge the chain, check [this section](/validators/maintenance#purging-chaindata).
 </Callout>
 
 ### Starting the Engine
