--- a/app/validators/(1-concepts)/validator-types-and-states/page.mdx
+++ b/app/validators/(1-concepts)/validator-types-and-states/page.mdx
@@ -14,151 +14,11 @@ It is important to note that a Validator does not refer to just any node on the 
 
 This page should help operators understand how to set their Validator state to participate in auctions and manage their system accordingly.
 
-<br />
-{
-  <table>
-    <thead>
-      <tr>
-        <th width="144.33333333333331">Status Tag</th>
-        <th width="282">Description</th>
-        <th>Criteria</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Qualified</td>
-        <td>A Qualified validator can participate in Auctions.</td>
-        <td>
-          <p>
-            A validator node is considered <em>Qualified</em> if all of the
-            following conditions are fulfilled:
-          </p>
-          <ul>
-            <li>Account Role is Validator</li>
-            <li>
-              <strong>Online</strong> (
-              <a href="/validators/reputation-and-slashing#heartbeats--positive-reputation-">
-                based on last heartbeat submission
-              </a>
-              )
-            </li>
-            <li>Session Keys are registered</li>
-            <li>Peer Id is registered</li>
-            <li>Validator is not serving a suspension because of recently failing authorship</li>
-            <li>It is running <em>at least</em> the minimum required version of the Chainflip Engine</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td>Bidding</td>
-        <td>
-          A bidding node is indicating its intention to participate in auction.{" "}
-          <br /> Validators that wish to participate should set their bidding
-          intention to <code>true</code>
-        </td>
-        <td>
-          <p>
-            Outside of auction periods, Validators can set their bidding status
-            freely.
-            <br />
-          </p>
-          <p>During Auctions:</p>
-          <ul>
-            <li>
-              Bidding Validators may not redeem any funds and may not change
-              their state to Non-Bidding.
-            </li>
-            <li>All Validators can add funds at any time</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td>Retiring</td>
-        <td>
-          A retiring validator is indicating its intention to retire from the next auction.{" "}
-          <br /> Validators that wish to retire should set their bidding
-          intention to <code>false</code> (non-bidding).
-        </td>
-        <td>
-          <p>
-            Outside of auction periods, Validators can set their bidding status
-            freely.
-            <br />
-          </p>
-          <p>During Auctions:</p>
-          <ul>
-            <li>
-              Non-Bidding Validators can redeem any unlocked funds and can
-              change their state to bidding.
-            </li>
-            <li>All Validators can add funds at any time</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td>Backup</td>
-        <td>
-          A Backup validator earns FLIP rewards but does not participate in
-          block authorship. See{" "}
-          <a href="/validators/validator-auctions-bonds-and-rewards#backup-rewards">
-            Backup Rewards
-          </a>{" "}
-          section.
-          <br />
-          <br />
-          <em>May be a keyholder.</em>
-        </td>
-        <td>
-          <ul>
-            <li>Is Qualified</li>
-            <li>Is not an Authority</li>
-            <li>
-              Is among the set of highest bidding Non-Authorities, (maximum
-              1/3rd the size of the current Authority Set, usually 50).
-            </li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td>Keyholder</td>
-        <td>
-          A Keyholder holds a fragment of an unexpired threshold signing key from a previous Authority Set.
-        </td>
-        <td>
-          <ul>
-            <li>A node remains as Keyholder until all held key fragments expire. Keys expire at the start of the epoch after the next.</li>
-            <li>Keyholders can redeem funds if they are not bidding</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td>Authority </td>
-        <td>
-          <p>
-            Authorities are responsible for block authorship and consensus,
-            witnessing, threshold signing and transaction broadcasting. In
-            return they earn{" "}
-            <a href="/validators/validator-auctions-bonds-and-rewards#authority-rewards">
-              Authority Rewards
-            </a>
-          </p>
-          <p>
-            <br />
-            Authorities are <a href="/validators/validator-auctions-bonds-and-rewards#bonds">
-              Bonded
-            </a> according to the auction preceding the KeyGen ceremony for the held
-            key.
-          </p>
-        </td>
-        <td>
-          <ul>
-            <li>Auction winner</li>
-            <li>Successfully participated in a Keygen ceremony.</li>
-            <li>Block Producer &#x26; State Chain Authority</li>
-            <li>Witnesser</li>
-          </ul>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-}
+| Status Tag    | Description                                                                                                                                                                                                                                                                                                                                                                    | Criteria                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+|---------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Qualified** | A Qualified validator can participate in Auctions.                                                                                                                                                                                                                                                                                                                             | A validator node is considered *Qualified* if all of the following conditions are fulfilled:<br/><br/> - Account Role is Validator<br/>- **Online** ([based on last heartbeat submission](/validators/reputation-and-slashing#heartbeats--positive-reputation-))<br/>- Session Keys are registered<br/>- Peer Id is registered<br/>- Running *at least* the minimum required version of the Chainflip Engine.<br/>- The Validator's FLIP balance is at or above the Minimum Required Stake (20k FLIP at the time of writing) |
+| **Bidding**   | A bidding node is indicating its intention to participate in auction.<br/>Validators that wish to participate should set their bidding intention to `true`.                                                                                                                                                                                                                    | Outside of auction periods, Validators can set their bidding status freely.<br/><br/>**During Auctions:**<br/>- Bidding Validators may not redeem funds or change state to Non-Bidding.<br/>- All Validators can add funds at any time                                                                                                                                                                                                                                                                                       |
+| **Retiring**  | A retiring validator is indicating its intention to retire from the next auction.<br/>Validators that wish to retire should set their bidding intention to `false` (non-bidding).                                                                                                                                                                                              | Outside of auction periods, Validators can set their bidding status freely.<br/><br/>**During Auctions:**<br/>- Non-Bidding Validators can redeem unlocked funds and change their state to bidding.<br/>- All Validators can add funds at any time                                                                                                                                                                                                                                                                           |
+| **Keyholder** | A Keyholder holds a fragment of an unexpired threshold signing key from a previous Authority Set.                                                                                                                                                                                                                                                                              | - Remains Keyholder until all held key fragments expire (keys expire at the start of the epoch after the next)<br/>- Can redeem funds if not bidding                                                                                                                                                                                                                                                                                                                                                                         |
+| **Authority** | Authorities are responsible for block authorship, consensus, witnessing, threshold signing, and transaction broadcasting. They earn [Authority Rewards](/validators/validator-auctions-bonds-and-rewards#authority-rewards).<br/><br/>Authorities are [Bonded](/validators/validator-auctions-bonds-and-rewards#bonds) according to the auction preceding the KeyGen ceremony. | - Auction winner<br/>- Successfully participated in a Keygen ceremony<br/>- Block Producer & State Chain Authority<br/>- Witnesser                                                                                                                                                                                                                                                                                                                                                                                           |
+
