fix: added missing links

--- a/app/protocol/(1-concepts)/delegation/page.mdx
+++ b/app/protocol/(1-concepts)/delegation/page.mdx
@@ -24,7 +24,7 @@ Likewise, Delegators can withdraw their support or switch their allegiance to an
 
 "But how can I delegate?", you may ask.
 
-The simplest way for **Delegators** to, well, delegate, is to interact directly from their Ethereum wallets. Assuming you already own some $FLIP tokens go to the [staking page](TODO) and follow the instructions.
+The simplest way for **Delegators** to, well, delegate, is to interact directly from their Ethereum wallets. Assuming you already own some $FLIP tokens go to the [staking page](https://auctions.perseverance.chainflip.io/v2/delegate) and follow the instructions.
 
 If you are a budding **Operator** or an existing **Validator**, check out the corresponding section in the [validator docs](/validators/delegation) section of the docs.
 
