--- a/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/functions/page.mdx
@@ -462,6 +462,7 @@ type DepositAddressRequestV2 = {
     retryDurationBlocks: number,
     refundAddress: string,
     slippageTolerancePercent: number;
+    livePriceSlippageTolerancePercent: number;
   };
   srcAddress?: string;
   brokerCommissionBps?: number;
@@ -515,8 +516,8 @@ The `depositAddressRequest` object describes the swap for which a deposit addres
             <span className="param-required-label">(required)</span>
         </td>
         <td>
-            Parameters to set a <a href="/protocol/swapping-basics#minimum-accepted-price-slippage-protection">minimum accepted price</a>.
-            This allows to protect against price changes between a quote and the execution of a swap (also known as slippage protection).
+            Parameters to set a <a href="/protocol/swapping-basics#slippage-protection">minimum accepted price</a>.
+            This protects the swapper against price changes between a quote and the execution of a swap.
         </td>
         <td><code>Object</code></td>
     </tr>
@@ -574,7 +575,8 @@ type DepositAddressRequestV2 = {
   fillOrKillParams: {
     retryDurationBlocks: number,
     refundAddress: string,
-    slippageTolerancePercent: number;
+    slippageTolerancePercent: number,
+    livePriceSlippageTolerancePercent: number;
   };
   depositChannelId: string;
   depositAddress: string;
@@ -814,7 +816,7 @@ The `vaultSwapRequest` object describes the swap for which the vault swap data i
             <span className="param-required-label">(required)</span>
         </td>
         <td>
-            Parameters to set a <a href="/protocol/swapping-basics#minimum-accepted-price-slippage-protection">minimum accepted price</a>.
+            Parameters to set a <a href="/protocol/swapping-basics#slippage-protection">minimum accepted price</a>.
             This allows to protect against price changes between a quote and the execution of a swap (also known as slippage protection).
         </td>
         <td><code>Object</code></td>
@@ -1205,7 +1207,7 @@ The `cfParameters` object describes the swap for which the CF parameters data is
 |-------|-------------|-----------|
 |<code>quote</code><span className="param-required-label">(required)</span> | The object returned by [<code>getQuoteV2</code>](/brokers/javascript-sdk/functions#getquotev2) This object will be used to set the input and output assets, the DCA parameters (if it is a DCA quote), and the boost parameters (if it is a boost quote).| <code>Quote</code> |
 |<code>destAddress</code><span className="param-required-label">(required)</span>| Address where the swapped tokens will be sent to on the destination chain. | <code>string</code>|
-|[<code>fillOrKillParams</code><span className="param-required-label">(required)</span>](/brokers/javascript-sdk/params#fillorkillparams) | Parameters to set a [minimum accepted price](/protocol/swapping-basics#slippage-protection-minimum-accepted-price) This allows to protect against price changes between a quote and the execution of a swap (also known as slippage protection).| <code>Object</code>|
+|[<code>fillOrKillParams</code><span className="param-required-label">(required)</span>](/brokers/javascript-sdk/params#fillorkillparams) | Parameters to set a [minimum accepted price](/protocol/swapping-basics#slippage-protection) This allows to protect against price changes between a quote and the execution of a swap (also known as slippage protection).| <code>Object</code>|
 |<code>srcAddress</code><span className="param-optional-label">(optional)</span>| Address that will sign and send the vault swap transaction. This parameter is required to encode vault swaps starting from Solana. | <code>string</code>|
 |<code>brokerAccount</code><span className="param-optional-label">(optional)</span>| account that receives the commission for the swap. | <code>string</code>|
 |<code>brokerCommissionBps</code><span className="param-optional-label">(optional)</span>| Commission charged by the broker of the swap, in basis points. This option is only available when setting a <code>brokerAccount</code> or the SDK is initialized with a <code>brokerUrl</code>| <code>number</code>|
