--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/bitcoin/page.mdx
@@ -219,18 +219,19 @@ You should not need to build this encoding yourself. Always prefer to use the [`
 
 The swap parameters are encoded in the `nulldata UTXO` payload using [Parity's SCALE](https://docs.polkadot.com/polkadot-protocol/basics/data-encoding/#scale-codec) codec, in the following order:
 
-| Param | Description | Data Type |
-| ------| ----------- | --------- |
-| `version` | Encoding version number. Currently `0` | `u8` |
-| `output_asset` | Destination [asset ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation). | `u8` |
-| `output_address` | Encoded [address](/brokers/broker-api/types#addresses) | `Vec<u8>` |
-| `retry_duration` | Number of blocks to wait before refunding the swap | `u16` |
-| `min_output_amount` | Minimum output amount in the smallest unit of the output asset | `u128` |
-| `number_of_chunks` | DCA: The number of chunks the swap should be broker up into | `u16` |
-| `chunk_interval` | DCA: The delay between DCA chunks in number of 6-second blocks | `u16` |
-| `boost_fee` | Maximum accepted boost fee in basis points (100th of a percent) | `u8` |
-| `broker_fee` | Broker fee in basis points | `u8` |
-| `affiliates` | List of up to 2 [affiliate short IDs](/brokers/broker-api/requests#broker_register_affiliate) and fee (basis points) | `Vec<(u8, u8)>`|
+| Param                       | Description                                                                                                          | Data Type       |
+|-----------------------------|----------------------------------------------------------------------------------------------------------------------|-----------------|
+| `version`                   | Encoding version number. Currently `1`                                                                               | `u8`            |
+| `output_asset`              | Destination [asset ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation).              | `u8`            |
+| `output_address`            | Encoded [address](/brokers/broker-api/types#addresses)                                                               | `Vec<u8>`       |
+| `retry_duration`            | Number of blocks to wait before refunding the swap                                                                   | `u16`           |
+| `min_output_amount`         | Minimum output amount in the smallest unit of the output asset                                                       | `u128`          |
+| `max_oracle_price_slippage` | Maximum oracle price slippage in basis points (100th of a percent). Set to 255 to disable this check.                | `u8`            |
+| `number_of_chunks`          | DCA: The number of chunks the swap should be broker up into                                                          | `u16`           |
+| `chunk_interval`            | DCA: The delay between DCA chunks in number of 6-second blocks                                                       | `u16`           |
+| `boost_fee`                 | Maximum accepted boost fee in basis points (100th of a percent)                                                      | `u8`            |
+| `broker_fee`                | Broker fee in basis points                                                                                           | `u8`            |
+| `affiliates`                | List of up to 2 [affiliate short IDs](/brokers/broker-api/requests#broker_register_affiliate) and fee (basis points) | `Vec<(u8, u8)>` |
 
 <Callout type="info">
 The encoded data in `nulldata_payload` returned by [broker_request_swap_parameter_encoding](/brokers/broker-api/requests#broker_request_swap_parameter_encoding) does not include any OP codes. Depending on how you build your transaction, you may need to add these manually.
