--- a/app/validators/(1-concepts)/validator-auctions-bonds-and-rewards/page.mdx
+++ b/app/validators/(1-concepts)/validator-auctions-bonds-and-rewards/page.mdx
@@ -115,26 +115,29 @@ Operator `Olive` manages two validators `Valery` and `Vanessa`, and has received
 
 The respective stakes at auction time were:
 
-Valery:  20K $FLIP
-Vanessa: 10K $FLIP
-Denzel:  10K $FLIP
-Deena:   40K $FLIP
-Daisy:   40K $FLIP
-Dermot:  80K $FLIP
+* Validators:
+  * `Valery`:  20K $FLIP
+  * `Vanessa`: 10K $FLIP
+* Delegators:
+  * `Denzel`:  10K $FLIP
+  * `Deena`:   40K $FLIP
+  * `Daisy`:   40K $FLIP
+  * `Dermot`:  80K $FLIP
 
-The total bid available is 200K $FLIP, which can be distributed between 2 Validators, for a bid 100K $FLIP each.
 
-Now imagine the auction completes and the Bond is set at 90K $FLIP.
+The total bid available is **200K \$FLIP** (Validators total = 30K \$FLIP and Delegators total = 170K \$FLIP), which can be distributed between 2 Validators, for a bid 100K \$FLIP each.
+
+Now imagine the auction completes and the Bond is set at 90K \$FLIP.
 
 For a payout of 1500 $FLIP:
 
-The Validator share is 30K / 90K, so 1/3 = 500 $FLIP.
+* The Validator share is 30K / 90K, so 1/3 = 500 \$FLIP.
 
-Of the remaining 1000 $FLIP, `Olive` takes her 20% fee = 200 $FLIP.
+* Of the remaining 1000 \$FLIP, `Olive` the operator takes her 20% fee = 200 \$FLIP.
 
-This leaves 800 $FLIP for the delegators, which is split proportionally:
+This leaves 800 \$FLIP for the delegators, which is split proportionally:
 
-Denzel:  ~47 $FLIP
-Deena:  ~188 $FLIP
-Daisy:  ~188 $FLIP
-Dermot: ~376 $FLIP
+* `Denzel` (share 10K/170K) :  **~47 \$FLIP**
+* `Deena`  (share 40K/170K) :  **~188 \$FLIP**
+* `Daisy`  (share 40K/170K) :  **~188 \$FLIP**
+* `Dermot` (share 80K/170K) :  **~376 \$FLIP**
